[tool.poetry]
name = "dita"
version = "0.1.0"
description = "Command-line Discogs tagger"
authors = ["hejops"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
datetime = "^5.4"
filetype = "^1.2.0"
flatdict = "^4.0.1"
levenshtein = "^0.24.0"
mutagen = "^1.47.0"
natsort = "^8.4.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
pathlib = "^1.0.1"
psutil = "^5.9.8"
pyfzf = "^0.3.1"
pytest = "^8.0.0"
readchar = "^4.0.5"
requests = "^2.31.0"
st-clickable-images = "^0.0.3"
streamlit = "^1.31.0"
tabulate = "^0.9.0"
termcolor = "^2.4.0"
tinytag = "^1.10.1"
titlecase = "^2.4.1"
tqdm = "^4.66.1"
unidecode = "^1.3.8"
yt-dlp = "^2023.12.30"
python-mpv = "^1.0.5"

[tool.poetry.scripts]
mover = "file.mover:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
