[tool.poetry]
name        = "dita"
version     = "0.1.0"
description = "Command-line Discogs tagger"
authors     = [ "hejops" ]
license     = "GNU GPLv3"
readme      = "README.md"
homepage    = "https://github.com/hejops/dita"
repository  = "https://github.com/hejops/dita"

[tool.poetry.dependencies]
python              = "^3.11"
bs4                 = "^0.0.2"
datetime            = "^5.4"
filetype            = "^1.2.0"
flatdict            = "^4.0.1"
levenshtein         = "^0.26.1"
mutagen             = "^1.47.0"
natsort             = "^8.4.0"
numpy               = "^1.26.3"
pandas              = "^2.2.3"
pathlib             = "^1.0.1"
psutil              = "^5.9.8"
pyfzf               = "^0.3.1"
pytest              = "^8.0.0"
readchar            = "^4.0.5"
requests            = "^2.31.0"
st-clickable-images = "^0.0.3"
streamlit           = "^1.31.0"
tabulate            = "^0.9.0"
termcolor           = "^2.4.0"
tinytag             = "^1.10.1"
titlecase           = "^2.4.1"
tqdm                = "^4.66.1"
unidecode           = "^1.3.8"
yt-dlp              = "^2023.12.30"
python-mpv          = "^1.0.6"
pylint              = "^3.0.3"
agentbrowser        = "^0.2.2"
cloudscraper        = "^1.2.71"
ytmusicapi          = "^1.6.0"
lxml                = "^5.2.1"
musicbrainzngs      = "^0.7.1"
html5lib            = "^1.1"

[tool.poetry.scripts]
convert_files       = "dita.file.convert:main"
discogs_collection  = "dita.discogs.collection:main"
discogs_credits     = "dita.discogs.artist:get_credits"
discogs_list        = "dita.discogs.core:parse_list"
discogs_marketplace = "dita.discogs.marketplace:main"
discogs_rate        = "dita.discogs.rate:main"
discogs_release     = "dita.discogs.release:main"
dump_collection     = "dita.discogs.collection:dump_collection_to_csv"
dump_library        = "dita.tag.fix:dump_library_dirs"
fetch_rss           = "dita.scrape.rss:main"
fix_genres          = "dita.tag.genre:main"
fix_tags            = "dita.tag.fix:main"
move_files          = "dita.file.mover:main"
musicbrainz         = "dita.musicbrainz.core:main"
pmp                 = "dita.play.pmp:main"

[build-system]
requires      = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
